fix alignment for desktop, hides mailbox modal by wrapping in a django block

--- a/fle_site/apps/main/static/css/kickstarter.css
+++ b/fle_site/apps/main/static/css/kickstarter.css
@@ -326,10 +326,10 @@ header {
   -o-background-size: cover;
   text-align: center;
   color: white;
-  height: 100vh;
+  height: 90vh;
 }
 header .intro-text {
-  padding-top: 100px;
+  padding-top: 90px;
   padding-bottom: 50px;
 }
 header .intro-text .intro-lead-in {
@@ -353,19 +353,16 @@ header .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
+    padding: 95px 0 200px 0;
   }
   header .intro-text .intro-lead-in {
     font-family: "Helvetica Neue","Droid Serif", Helvetica, Arial, sans-serif;
     font-style: normal;
     font-size: 25px;
     line-height: 40px;
-    position: absolute;
-    left: 0;
-    right: 0;
     margin: 0 auto;
-    top: 25%;
+    position: relative;
+    top: 65px;
 	}
   header .intro-text .intro-heading {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -373,18 +370,14 @@ header .intro-text .intro-heading {
     font-weight: 700;
     font-size: 80px;
     line-height: 75px;
-    position: absolute;
-    left: 0;
-    right: 0;
     margin: 0 auto;
-    top: 15%;
   }
   header .action-button{
-    position: absolute;
+    position: relative;
     left: 0;
     right: 0;
     margin: 0 auto;
-    top: 85%;
+    top: 380px;
   }
 }
 section {
